--- a/portfolio-details3.html
+++ b/portfolio-details3.html
@@ -46,25 +46,17 @@
         <div class="row">
 
           <div class="col-lg-8">
-            <h2 class="portfolio-title">Quizzz Game</h2>
+            <h2 class="portfolio-title">Point of Sales</h2>
 
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets\img\Quizz\Screenshot 2022-11-19 192102.png" alt="" width="800px" height="600px">
+                  <img src="assets\img\Anysales\Picture2.png" alt="" width="800px" height="600px">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets\img\Quizz\Screenshot 2022-11-19 192157.png" alt="" width="800px" height="600px">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets\img\Quizz\Screenshot 2022-11-19 192300.png" alt="" width="800px" height="600px">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets\img\Quizz\Screenshot 2022-11-19 192322.png" alt="" width="800px" height="600px">
+                  <img src="assets\img\Anysales\Picture3.png" alt="" width="800px" height="600px">
                 </div>
 
               </div>
@@ -77,12 +69,12 @@
             <h3>Project information</h3>
             <ul>
              
-              <li><strong>Project date</strong>: May 2022</li>
+              <li><strong>Project date</strong>: 2022</li>
              
             </ul>
 
             <p>
-              A Application Quiz that makes you test if you have the knowledge of what you know about the topics given.
+              Point of Sales website that stores data of cashier info and does cash register work.
             </p>
           </div>
 
