--- a/index.html
+++ b/index.html
@@ -104,25 +104,27 @@
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
-            <div class="icon"><img src="https://img.icons8.com/ios/50/null/c.png"/></div>
-            <h4>C</h4>
-            <p>Programming language that can efficiently work on enterprise application, games, & many more.</p>
+            <div class="icon"><img src="https://img.icons8.com/ios/50/null/mysql-logo.png"/></div>
+            <h4>MySQL</h4>
+            <p>An Open-source relational database management system that can be use to store database information. <!--This can be used such as
+              a simple shopping list to a corporate networking system that required a lot of data management and system attention.-->
+            </p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
-            <div class="icon"><img src="https://img.icons8.com/ios/57/null/cs.png"/></div>
-            <h4>C#</h4>
-            <p>Programming language that create number of different programs & applications such as mobile, desktop apps, websites, & many more.</p>
+            <div class="icon"><img src="https://img.icons8.com/ios/50/null/php.png"/></div>
+            <h4>PHP</h4>
+            <p>A general purpose scripting language that many devs use for web development for projects with a inclusion of GUI's.</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
             <div class="icon"><img src="https://img.icons8.com/ios/50/null/java-coffee-cup-logo--v1.png"/></div>
-            <h4>Java</h4>
-            <p>Programming language that is used for back-end development, server-side language and many more.</p>
+            <h4>C, C#, Java</h4>
+            <p>Other programming language that is used for front & back-end development, server-side language and many more.</p>
           </div>
         </div>
 
